# stickymd

./: .gitignore  WORK_LOG.md  electron-builder.yml  package-lock.json  package.json
docs/: TODO.md
docs/01-plan/features/: phase13.plan.md  phase14-installer.plan.md  phase14-ux.plan.md  sticky-memo.plan.md
docs/02-design/features/: phase13.design.md  phase14-ux.design.md  sticky-memo.design.md
docs/03-analysis/: phase13.analysis.md  renderer.analysis.md
docs/04-report/: changelog.md  phase13.report.md  phase14-installer.report.md  renderer.report.md
docs/archive/2026-03/: _INDEX.md
resources/: README.txt
src/: App.tsx  StickyApp.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: config.rs  memo.rs  mod.rs  sticky.rs  window.rs
src-tauri/src/utils/: frontmatter.rs
src/components/EditorArea/: EditorArea.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/StickyEditor/: StickyEditor.tsx
src/components/StickyTitleBar/: StickyTitleBar.tsx
src/components/TitleBar/: TitleBar.tsx
src/hooks/: useAppInit.ts
src/main/: index.ts
src/main/lib/: alarm-scheduler.ts  constants.ts  hotkey.ts  json-store.ts  manager-window.ts  memo-file.ts  settings-ipc.ts  store.ts  theme.ts  tray.ts  types.ts  window-manager.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  main.tsx  theme.css
src/shared/: types.ts
src/stores/: memoStore.ts
src/styles/: globals.css
src/types/: memo.ts
(+35 files in other folders)
