[package]
name = "sticky-memo"
version = "1.0.0"
description = "Lightweight markdown sticky memo for Windows"
authors = ["you"]
edition = "2021"

[lib]
name = "sticky_memo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
notify = "6"
dirs = "5"
urlencoding = "2"
